# schedula_project

./: database.db  pyproject.toml  requirements.txt
schedula/: app.py  models.py  schemas.py  security.py  settings.py  tasks.py  utils.py
schedula/repositories/: sala.py  usuario.py
schedula/routes/: root.py  sala.py  usuarios.py
schedula/sql/: db_create_tables.py  db_default_sql.py  db_drop_tables.py  db_triggers.py  sala_sql.py  usuario_sql.py
schedula/templates/: base.html  bem_vindo.html  contato.html  horario.html  login.html  perfil.html  registrar.html  reserva.html  sala.html  sobre.html  toast.html
schedula/templates/includes/: navbar.html
